--- a/style.css
+++ b/style.css
@@ -37,11 +37,12 @@ body{
     margin-top: 40px;
     width: 450px;
     height: 450px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(160, 160, 160);
     display: flex;
     flex-wrap: wrap;
-    border: solid 2px black;
+    border: solid 2px rgb(38, 0, 254);
     margin-bottom: 60px;
+    border-radius: 30px;
 }
 #reset{
     width: 140px;
@@ -58,8 +59,8 @@ body{
 .square{
     width: 150px;
     height: 150px;
-    background-image: rgb(255, 255, 255);
-     border: solid 2px rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+     border: solid 0.5px rgb(25, 0, 252);
      box-sizing: border-box;
      display: flex;
      justify-content: center;
@@ -68,6 +69,7 @@ body{
      color: rgb(209, 234, 200);
      font-size: 100px;
      cursor: pointer;
+     border-radius: 50px;
 }
 #one{
     color: #000000;
@@ -76,6 +78,7 @@ body{
     border: 3px solid rgb(0, 0, 0);
     padding: 30px;
     width: 200px;
+    border-radius: 50px;
     /* background-color: #616161; */
 }
 #two{
@@ -86,4 +89,5 @@ body{
     border: 3px solid rgb(0, 0, 0);
     padding: 30px;
     width: 200px;
+    border-radius: 50px;
 }
